Fix aligncenter

--- a/Blocks/Badges/vipps-badge/editor.css
+++ b/Blocks/Badges/vipps-badge/editor.css
@@ -6,6 +6,10 @@
 .wp-block-woo-vipps-vipps-badge {
 }
 
+.vipps-badge-wrapper.aligncenter {
+  text-align: center;
+}
+
 .vipps-smile.vipps-component-icon {
     width: 24px;
 }
